<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.gusteau.presentation.home.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_filtered_meals"
            app:destination="@id/navigation_filtered_meals" />
        <action
            android:id="@+id/action_navigation_home_to_mealDetailsFragment"
            app:destination="@id/mealDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.gusteau.presentation.search.view.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.gusteau.presentation.favorites.view.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_plan"
        android:name="com.example.gusteau.presentation.plan.view.PlanFragment"
        android:label="@string/planner"
        tools:layout="@layout/fragment_plan" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.gusteau.presentation.settings.view.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_filtered_meals"
        android:name="com.example.gusteau.presentation.filteredmeals.view.FilteredMealsFragment"
        android:label="Filtered Meals"
        tools:layout="@layout/fragment_filtered_meals">
        <action
            android:id="@+id/action_navigation_filtered_meals_to_mealDetailsFragment"
            app:destination="@id/mealDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/mealDetailsFragment"
        android:name="com.example.gusteau.presentation.mealdetails.view.MealDetailsFragment"
        android:label="fragment_meal_details"
        tools:layout="@layout/fragment_meal_details" />

</navigation>