<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_normal"
        android:paddingTop="@dimen/spacing_xlarge"
        android:paddingEnd="@dimen/spacing_normal"
        android:paddingBottom="@dimen/spacing_xlarge">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_marginTop="@dimen/spacing_normal"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Gusteau.Rounded" />

        <TextView
            android:id="@+id/tv_welcome_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Gusteau.Headline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_app_logo" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:text="@string/good_to_see_you"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Gusteau.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome_headline" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.Gusteau.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:hint="@string/email_address"
            android:textCursorDrawable="@drawable/cursor_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/text_tertiary_light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/button_height_large"
                android:textAppearance="@style/TextAppearance.Gusteau.Body1"
                tools:text="chef@gusteau.com" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.Gusteau.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/password"
            android:textCursorDrawable="@drawable/cursor_primary"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/text_tertiary_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/text_tertiary_light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minHeight="@dimen/button_height_large"
                android:textAppearance="@style/TextAppearance.Gusteau.Body1"
                tools:text="password123" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Widget.Gusteau.Button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password" />

        <View
            android:id="@+id/divider_left"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:background="@color/divider_light"
            app:layout_constraintEnd_toStartOf="@id/tv_or"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/or"
            android:textAppearance="@style/TextAppearance.Gusteau.Body2"
            android:textColor="@color/text_tertiary_light"
            app:layout_constraintBottom_toBottomOf="@id/divider_left"
            app:layout_constraintEnd_toStartOf="@id/divider_right"
            app:layout_constraintStart_toEndOf="@id/divider_left"
            app:layout_constraintTop_toTopOf="@id/divider_left" />

        <View
            android:id="@+id/divider_right"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/spacing_normal"
            android:background="@color/divider_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_or"
            app:layout_constraintTop_toTopOf="@id/divider_left" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_google_signin"
            style="@style/Widget.Gusteau.Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height_large"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:text="@string/continue_with_google"
            android:textColor="?attr/colorOnSurface"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/spacing_small"
            app:iconSize="@dimen/icon_size_normal"
            app:iconTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_left" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_guest_mode"
            style="@style/Widget.Gusteau.Button.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/guest_mode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_google_signin" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_guest_mode">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textAppearance="@style/TextAppearance.Gusteau.Body1"
                android:textColor="@color/text_secondary_light" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_xsmall"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/spacing_small"
                android:text="@string/sign_up"
                android:textAppearance="@style/TextAppearance.Gusteau.Body1.Bold"
                android:textColor="@color/primary" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/primary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>